# variant-map

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/enum-map/: Cargo.toml
crates/enum-map-derive/: Cargo.toml
crates/enum-map-derive/src/: attrs.rs  common.rs  lib.rs  maps.rs  structs.rs
crates/enum-map-derive/tests/: tests.rs
crates/enum-map/src/: common.rs  enum_map.rs  lib.rs  macros.rs
crates/enum-map/src/btreemap/: lib.rs
crates/enum-map/src/hashmap/: lib.rs
crates/enum-map/tests/: maps_tests.rs  struct_tests.rs  tests.rs
crates/variant-map/: Cargo.toml  README.md
crates/variant-map-derive/: Cargo.toml  README.md
crates/variant-map-derive/src/: attrs.rs  common.rs  lib.rs  maps.rs  structs.rs
crates/variant-map/src/: README.md  common.rs  lib.rs  macros.rs
crates/variant-map/src/btreemap/: lib.rs
crates/variant-map/src/hashmap/: lib.rs
crates/variant-map/tests/: maps_tests.rs  struct_tests.rs  tests.rs
example/: Cargo.toml
example/src/: main.rs
