[package]
name = "enum-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
enum-map-derive = { path = "../enum-map-derive", default-features = false, optional = true }

[features]
derive = ["dep:enum-map-derive"]

[dev-dependencies]
serde_json = "1.0.104"