[package]
name = "variant-map-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["struct", "enum", "variant", "map", "store"]
categories = ["data-structures"]
description = "derive macro for the variant-map crate, adds another type called StructMap"
repository = "https://github.com/mxyns/variant-map"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.28"
quote = "1.0.32"
proc-macro2 = "1.0.66"
darling = "0.20.3"
serde = { version = "1.0.183", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.104"