[package]
name = "variant-map"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["struct", "enum", "variant", "map", "store"]
categories = ["data-structures"]
description = "defines maps to store variants of enums"
repository = "https://github.com/mxyns/variant-map"

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
variant-map-derive = { version="0.1.0", default-features = false, optional = true }

[features]
derive = ["dep:variant-map-derive"]
struct-map = ["derive"]
macros = []

[dev-dependencies]
serde_json = "1.0.104"